# myappassistant

./: .coverage  .curorrules  .cursorrules  .dockerignore  .env.dev  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  =23.0.0  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.backend  Dockerfile.ollama  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REPORT.md  GPU_SETUP.md  IMPLEMENTATION_STEPS.md  IMPORT_RESTRUCTURING_REPORT.md  LICENSE  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  README.md  README_DEVELOPMENT.md  REFACTORING_PLAN.md  STREAMING_IMPLEMENTATION.md  TEST_EXECUTION_SUMMARY.md  check_imports.py  check_langchain.py  conftest.py  debug_imports.py  docker-compose.debug.yml  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.fixed-final.yml  docker-compose.fixed.yml  docker-compose.logging.yml  docker-compose.override.yml  (+46 more)
.github/workflows/: ci.yml
NAPRAWA_KODU/: checklist-naprawy-aktualizowana.md  foodsave-ai-fixes.md  plan-naprawy-foodsave-ai.md  quick-fix-priority.md  script.py  script_1.py  script_2.py  script_3.py  script_4.py
archive/code_fixes/: foodsave-ai-fixes.md  quick-fix-priority.md  script.py  script_3.py
archive/markdown_files/: ARCHITECTURE_DOCUMENTATION.md  AUDIT_REPORT.md  GPU_SETUP.md  README_DEV_SIMPLE.md  REFACTORING_CHECKLIST.md  frontend-implementation-checklist.md  naming_conventions_map.md
archive/old_files/: check_naming.py  docker_fix.py  important_files.txt  locustfile.py  naming_conventions_map.md  project_tree.txt  refactor_md  test_fixes.py  test_frontend_backend.html  test_mmlw_embeddings.py  test_perplexity.py  test_search_agent.py
archive/test_documentation/: podsumowanie-testow.md  test-enhanced-base-agent.md  test-hybrid-llm-client.md  test-search-agent.md
backend/: config.py  main.py  pyproject.toml  run_intent_tests.py  setup.py
backend/agent/: main_loop.py  orchestrator.py  prompts.py  state.py  utils.py
backend/agents/: agent_factory.py  base_agent.py  code_agent.py  food_save_agent.py  ocr_agent.py  orchestrator.py  prompts.py  state.py  tools.py  utils.py
backend/api/: agents.py  chat.py  food.py  pantry.py  upload.py
backend/core/: crud.py  database.py  llm_client.py  migrations.py  ocr.py  seed_data.py  utils.py
backend/models/: shopping.py
backend/schemas/: shopping_schemas.py
backend/services/: shopping_service.py
backend/tests/: test_entity_extraction.py  test_full_dialogue.py  test_intent_recognition.py
data/config/: llm_settings.json
data/docs/: RAG_GUIDE.md  rag_document.txt  rag_sample.md
dev/: check_langchain.py  find_text_splitter.py
docs/: AGENTS_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_DOCUMENTATION.md  BACKUP_SYSTEM_GUIDE.md  CONTRIBUTING_GUIDE.md  DATABASE_GUIDE.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MDC_SETUP_SUMMARY.md  MODEL_OPTIMIZATION_GUIDE.md  MONITORING_TELEMETRY_GUIDE.md  RAG_SYSTEM_GUIDE.md  README.md  TESTING_GUIDE.md  frontend-implementation-plan.md
examples/: integrate_rag.py  rag_system_demo.ipynb
foodsave-frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.dev.frontend  README.md  REFACTORING_SUMMARY.md  jest.a11y.setup.js  jest.config.js  lighthouserc.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
foodsave-frontend/.next/: app-build-manifest.json  trace
foodsave-frontend/src/: middleware.ts
foodsave-frontend/test-results/: .last-run.json
frontend/src/: app.js  index.html  style.css
monitoring/: loki-config.yaml  prometheus.dev.yml  promtail-config.yaml
myappassistant-cosmic/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  justfile
myappassistant-cosmic/src/: app.rs  config.rs  main.rs
myappassistant-cosmic/src/api/: client.rs  endpoints_documentation.md  error.rs  mod.rs  models.rs
myappassistant-cosmic/src/core/: messages.rs  mod.rs  state.rs  theme.rs
myappassistant-cosmic/src/ui/: mod.rs
myappassistant-cosmic/src/ui/components/: mod.rs
myappassistant-cosmic/src/ui/pages/: chat.rs  dashboard.rs  mod.rs  ocr.rs  pantry.rs  settings.rs
myappassistant-cosmic/src/utils/: error.rs  helpers.rs  mod.rs
scripts/: backup_cli.py  capture_ollama_logs.sh  debug.sh  dev-run-simple.sh  dev-setup.sh  dev-status.sh  dev-stop.sh  fix_foodsave_errors.sh  fix_mypy_errors.py  foodsave-manager.sh  generate_chat_logs.py  generate_frontend_logs.py  install_missing_deps.sh  ollama-logger.sh  preload_models.py  rag_cli.py  rebuild-with-models.sh  run_manager.sh  run_performance_tests.py  seed_db.py  setup_logging.sh  setup_nvidia_docker.sh  start_monitoring.sh  start_ollama.sh  test-dev-setup.sh  test_rag_system.py
src/: __init__.py
src/backend/: .coverage  Dockerfile  Dockerfile.dev  __init__.py  app_factory.py  config.py  crud.py  debug_imports.py  logger.py  main.py  pyproject.toml  requirements.txt  run_intent_tests.py  start.sh  test_import.py  test_report.html
src/frontend/: Dockerfile  app.js  app.py  package-lock.json  package.json
tests/: FINAL_TEST_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS_SUMMARY.md  test_error_handling.py  test_orchestrator.py  test_rag_system.py  test_rag_system_fixed.py  test_receipt_processing.py  test_receipt_processing_fixed.py  test_search_agent_fixed.py  test_shopping_conversation.py  test_shopping_conversation_fixed.py  test_weather_agent.py  test_weather_agent_fixed.py
tests/e2e/: conftest.py  test_live_agents.py  test_streamlit_upload.py
tests/fixtures/: test_data.json
tests/integration/: conftest.py  test_agents.py  test_api_upload.py  test_fastapi_endpoints.py  test_orchestrator.py  test_receipt_endpoints_enhanced.py  test_v2_receipts.py  test_v2_receipts_isolation.py
tests/standalone/: test_search_agent_simple.py
tests/unit/: test_agent_factory.py  test_critical_fixes.py  test_enhanced_base_agent.py  test_enhanced_orchestrator.py  test_entity_extraction.py  test_full_dialogue.py  test_hybrid_llm_client.py  test_minimal.py  (+12 more)
ui/: config.py
(+989 files in other folders)
