[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "foodsave-ai"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
streamlit = "^1.20.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
ollama = "^0.1.0"

aiosqlite = "^0.19.0"
greenlet = "^3.0.3"
[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "*"
mypy = "^0.910"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.20.0"
pre-commit = "^3.0"
black = "^22.12.0"
isort = "^5.10.1"
flake8 = "^6.0"
bandit = "^1.7.4"
safety = "^2.3.2"
ruff = "^0.0.251"

[tool.pytest.ini_options]
pythonpath = ["src"]
