[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "foodsave-ai"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
packages = [
    { include = "backend", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"

# API Group
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
python-multipart = "^0.0.9"
slowapi = "^0.1.9"
httpx = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0.0"

# Database Group
aiosqlite = "^0.19.0"
greenlet = "^3.0.3"

# AI and Machine Learning Group
ollama = "^0.1.0"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
numpy = "^1.26.0"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
pytesseract = "^0.3.10"
PyMuPDF = "^1.24.1"

# Utilities
pytz = "^2024.1"
psutil = "^7.0.0"
structlog = "^24.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "*"
mypy = "^0.910"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.20.0"
pre-commit = "^3.0"
black = "^22.12.0"
isort = "^5.10.1"
flake8 = "^6.0"
bandit = "^1.7.4"
safety = "^2.3.2"
ruff = "^0.4.4"
types-requests = "^2.31.0"
memory-profiler = "^0.61.0"
locust = "^2.20.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "e2e: marks tests as end-to-end",
]
