[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foodsave-backend"
version = "0.1.0"
authors = [
    { name = "FoodSave Team" },
]
description = "Backend for FoodSave AI Assistant"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["backend"] 